--- a/Labboratorio10/app/build.gradle
+++ b/Labboratorio10/app/build.gradle
@@ -48,4 +48,5 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:32.4.0')
 
     implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.android.gms:play-services-auth:20.7.0'
 }
